Removed cache files and fixed outdated dirs/files. Added .gitignore file